Redone network scheme; minor fixes

--- a/Technical_Design_Document/Content/Connection.tex
+++ b/Technical_Design_Document/Content/Connection.tex
@@ -1,7 +1,7 @@
 \section{Connection}
 \subsection{Global Infrastructure}
   ~\\
-\fullwidthgraphicscaption{../Pictures/Network/Network_Scheme.jpg}{Network Infrastructure}
+\fullwidthgraphicscaption{../Pictures/Network/Network_Scheme.png}{Network Infrastructure}
 \pagebreak 
 \subsection{Network Requirements}
 
