--- a/Technical_Design_Document/Content/Delivery.tex
+++ b/Technical_Design_Document/Content/Delivery.tex
@@ -8,16 +8,15 @@ The Android version of the game will be delivered through the Google App Store.
 The HTML    version of the game will be available in a dedicated page within our website.
 
 \subsection{Delivery Methodology}
-Steam is used to sell the game for a starting price of 7,99€, advertisement-free.
-The Android version is available for free through the Google App Store with advertisements, but an in-app purchase to prevent the advertisements.
+Steam is used to sell the game for a starting price of 4,99€, advertisement-free.
+The Android version is available for free through the Google App Store with advertisements, but an in-app purchase of the same price to prevent the advertisements.
 We take advantage of those platforms to manage users login and to associate achievements to an user. A game account from one platform can be linked to the user in the other platform. When this happens, the obtained achievements are shown on both platforms. 
 
-% https://stackoverflow.com/questions/36200085/in-app-purchases-share-user-in-app-purchases-between-android-and-ios the following paragraph should be legal, maybe *wink*
+% https://stackoverflow.com/questions/36200085/in-app-purchases-share-user-in-app-purchases-between-android-and-ios the following paragraph should be legal, maybe *wink* TLDR si può fare
 
 We also take advantage of the platforms in-app purchase API to manage the purchase of cosmetics. Buying cosmetics in one platform will make them available in both PC and Android clients for the same account.
 
-The HTML version in our website will be playable for free and without an account. 
-There's no login required and no way to keep track of users achievements.
+The HTML version in our website will be playable for free by logging in using a Google Account in order to keep track of player's progress and achievements.
 
 In the HTML client there will be advertisements.
 
