--- a/Technical_Design_Document/Content/General_architecture/Backend.tex
+++ b/Technical_Design_Document/Content/General_architecture/Backend.tex
@@ -74,4 +74,4 @@ For more detail about all our estimation check here\footnote{https://tinyurl.com
 \subsubsection{Software}
 AWS services will use Linux OS. We can communicate with Amazon GameLift Services using dedicated GameLift Services API.
 \subsubsection{Scalability and Extensibility}
-Both our game servers and database service infrastructure support automatic workload adaptation and scalability, allowing to scale up the system if required. \\
+Both our game servers and database service infrastructure support automatic workload adaptation and scalability, allowing to scale up the system if required.
