Added gantt-related info to TDD

--- a/Technical_Design_Document/Content/Delivery.tex
+++ b/Technical_Design_Document/Content/Delivery.tex
@@ -1,6 +1,6 @@
 \section{Delivery}
 \subsection{Estimated Delivery Time}
-TODO: Gantt related
+We estimate that the game is going to be developed in 8 months, starting from the end of June 2021 up until the beta release on the 1st of March 2022.
 
 \subsection{Delivery Platform}
 The PC      version of the game will be delivered through Steam. 
