--- a/Technical_Design_Document/Content/Development/Development_Gantt.tex
+++ b/Technical_Design_Document/Content/Development/Development_Gantt.tex
@@ -1,4 +1,5 @@
 \subsection{Development Gantt}
-TODO: The big boy goes here
+
+\includegraphics[height=\textwidth, angle=-90, origin=c]{../Pictures/Development/Gantt_diagram.png}
 
 \pagebreak 
