--- a/Technical_Design_Document/Content/Development/Major_Software_Dev_Tasks.tex
+++ b/Technical_Design_Document/Content/Development/Major_Software_Dev_Tasks.tex
@@ -1,4 +1,19 @@
 \subsection{Major Software Development Tasks}
-TODO: Gantt related
+In this section, we'll enumerate the major tasks that we'll encounter throughout the game development:
+
+TODO 3 possibilità:\\
+- O lista di tutto come Nefarious\\
+- O lista semplice come LAN Zero\\
+- O lista tipo quella sotto che ho fatto io (aka breve descrizione delle task più grosse che abbiamo nel Gantt)
+
+\begin {itemize}	
+	\item \textbf{Main menu:} design and development of an affordable menu UI
+	\item \textbf{Network logic: } everything regarding the network infrastructure and connection between the agents in the Connection diagram: authentication and billing interfaces, connection to game session, synchronization of the gamestate between users in the same match
+	\item \textbf{Main Scene:}  design and development of the in-game UI and the turn-based main loop, effect statuses and actions
+	\item \textbf{Puzzles:}  puzzle design, random generation, specific cheating countermeasures
+	\item \textbf{Rooms:}  rooms design, puzzle association implementation, positive or negative effects implementation
+	\item \textbf{Stats, leaderboards and achievements:} data gathering and storing after match
+\end {itemize}
+
 
 \pagebreak 
