Refining Changelog section for GDD and TDD

--- a/Game_Design_Document/Changelog.tex
+++ b/Game_Design_Document/Changelog.tex
@@ -1,8 +1,38 @@
 \section{Changelog}
 
-\begin{longtable}{ m{2cm}m{3cm}m{8cm}} 
-\centering 
- \textbf{Who}& \textbf{When} & \textbf{What}\\
+\subsubsection*{Purpose}
+The purpose of a Game Design Document is to unambiguously describe the game's selling points, target audience, gameplay, art, level design, story, characters, UI, assets, etc. In short, every game part requiring development should be included by the developer in enough detail for the respective developers to implement the said part. The document is purposely sectioned and divided in a way that game developers can refer to and maintain the relevant parts.
 
+\subsubsection*{Creation Date}
+Since 2/04/2021.
+
+\subsubsection*{Last modification}
+Last modification: 03/06/2021.\\
+
+\begin{longtable}{ m{2cm}m{8cm}m{3cm}} 
+\centering 
+ \textbf{Who}& \textbf{What} & \textbf{When}\\
+Luca &			Document created			& 																	02/04/2021\\
+Francesco & 	Added Changelog section and basic document structure	&										03/04/2021\\
+Luca &			Added Vision Statement section &																10/04/2021\\
+Michael	& 		Added Game Mechanics subsection &																11/04/2021\\
+Francesco &		Added Story section  & 																			11/04/2021\\
+Luca &			Added Legal Analysis section & 																	15/04/2021\\
+Francesco &		Added Game Characters section & 																17/04/2021\\
+Michael &		Added Game Modes subsection & 																	17/04/2021\\
+Francesco &		Added Controls subsection & 																	24/04/2021\\
+Luca &			Added Concept Arts for characters images &														27/04/2021\\
+Francesco & 	Refined Game Characters section &																29/04/2021\\
+Luca &			Added Storyboard subsection & 																	01/05/2021\\
+Michael &		Finished Game Modes section with Puzzles and Statuses & 										03/05/2021\\
+Francesco &		Added Media List section & 																		05/05/2021\\
+Luca &			Added Audience, Platform, Marketing section & 													08/05/2021\\
+Michael	&		Added Achievements and Prizes subsection &														09/05/2021\\
+Luca & 			Finished Audience, Platform, Marketing section with Top performers and features comparison & 	14/05/2021\\
+Michael &		Finished Achievements and Prizes subsection & 													16/05/2021\\
+Francesco &		Finished Gameplay section with Overview, Gameplay description and Controls & 					17/05/2021\\
+Together &		Added Prototype section & 																		24/05/2021\\
+Together &		Reviewed the final version of the document adjusting minor English errors &  					28/05/2021\\
+Together & 		Fixed the structure of the document  &  														03/06/2021\\
 \end{longtable}
 \pagebreak
