Added hyperref to Packages

--- a/Game_Design_Document/Packages.tex
+++ b/Game_Design_Document/Packages.tex
@@ -16,6 +16,7 @@
 \usepackage{titlesec}
 \usepackage{longtable}
 \usepackage[default]{lato}
+\usepackage{hyperref}
 
 \titleformat{\section}
   {\normalfont\LARGE\bfseries}{\thesection}{1em}{}[{\titlerule[0.8pt]}]
