--- a/Game_Design_Document/Content/Prototype.tex
+++ b/Game_Design_Document/Content/Prototype.tex
@@ -1,5 +1,51 @@
 \section{Prototype}
 
-In the prototype there will be only.. \textbf{TODO}: insert complete prototype description
+\subsection{Implemented mechanics, features and rules}
+In the prototype there will be a placeholder screen to connect to the prototype game server, bypassing any matchmaking that will be in the final version of the game.
+
+There will also be the possibility to test individual minigames offline without an ongoing match.
+
+We will have a functional interface and scene for the 3 main phases of the game (action choice, action execution, minigame phase).
+However not all rooms and minigames will be implemented.
+
+Only the Standard Game Mode will be implemented, with its victory conditions. From there other modes can be easily simulated without their rules being forced by the game, as long as the involved testers play accordingly to other modes rules.
+
+\textbf{Minigames}
+\begin{itemize}
+	\item Tiles Path
+	\item Invet Tiles
+	\item Connect Lights
+	\item Connect Cables
+\end{itemize}
+
+\textbf{Rooms}
+\begin{itemize}
+	\item Empty
+	\item Entrance
+	\item Exit
+	\item Broom Depot
+	\item Mine (ON)
+	\item Mine (OFF)
+	\item Gear
+	\item Soundproof
+	\item Medical
+\end{itemize}
+
+With all the actions and items related to the listed Rooms.
+If enough time is left, we will add the different Classes to check their balance in a real match.
+
+\subsection{Testing only "cheats"}
+
+For testing purposes, there will be some old-school cheat codes.
+
+In the main game there will be codes to:
+
+\begin{itemize}
+	\item Allow the players to bypass a minigame and force the application of either the negative or the positive effect of the room they're in.
+	\item Teleport to a specific Room by coordinate in the grid
+	\item Change the type of a Room at specific coordinates in the grid
+	\item Add or remove a status from a Character
+	\item Add or remove an item from a Character
+\end{itemize}
 
 \pagebreak 
