Final fixes and corrections

--- a/Game_Design_Document/Content/Gameplay/Game_Mechanics/Puzzles.tex
+++ b/Game_Design_Document/Content/Gameplay/Game_Mechanics/Puzzles.tex
@@ -1,6 +1,6 @@
 \subsubsection{Puzzles}
 
-\paragraph{Jigsaw} But weirder (https://www.youtube.com/watch?v=ks3vbiCSmKI)
+\paragraph{Jigsaw} Recompose a randomly split figure or object from its pieces \\(e.g.https://www.youtube.com/watch?v=ks3vbiCSmKI)
 
 \paragraph{Connect the Cables} In a sqare grid, with an entrance point and an exit point, the Player has to arrange cables or tubes in order to let a liquid move from the entrance to the exit.
 
@@ -10,15 +10,17 @@
 
 \paragraph{Electrolyzer} From Rachet and Clank, (https://ratchetandclank.fandom.com/wiki/Electrolyzer), rotate the bridges to let electric orbs access them, until all electric orbs reached a bridge.
 
-\centeredgraphics{../Pictures/Puzzles/R\&C_Electrolyzer.png}
+\centeredgraphicssize{../Pictures/Puzzles/R\&C_Electrolyzer.png}{.8\textwidth}
 
 \paragraph{Hacker} From Rachet and Clank, (https://ratchetandclank.fandom.com/wiki/Hacker) rotate a platform, destroy red things before they reach the outer circle.
 
-\centeredgraphics{../Pictures/Puzzles/R\&C_Hacker.png}
+\centeredgraphicssize{../Pictures/Puzzles/R\&C_Hacker.png}{.8\textwidth}
+
+\pagebreak
 
 \paragraph{Decryptor} From Rachet and Clank, connect circuits by moving the ball so that it connects two isolated parts of the circuit. Let electric orbs flow to the end of the circuit.
 
-\centeredgraphics{../Pictures/Puzzles/R\&C_Decryptor.jpg}
+\centeredgraphicssize{../Pictures/Puzzles/R\&C_Decryptor.jpg}{.8\textwidth}
 
 \paragraph{Rythm} A quick rythm game section; press certain buttons within a time treshold.
 
@@ -28,27 +30,27 @@
 
 \paragraph{Precise movement} Inspired from Kingdom Come: Deliverance's lockpicking minigame, find the "sweet spot" of a rotating circle, then follow that sweet spot as the circle rotates 360°.
 
-\centeredgraphics{../Pictures/Puzzles/Kingdom_Come_Deliverance_lockpick.jpg}
+\centeredgraphicssize{../Pictures/Puzzles/Kingdom_Come_Deliverance_lockpick.jpg}{.8\textwidth}
 
 \paragraph{Sokoban} classic sokoban/pokémon cave puzzle style, move boulders to open your way from the entrance to the exit
 
-\centeredgraphics{../Pictures/Puzzles/Pokemon_strength.jpg}
+\centeredgraphicssize{../Pictures/Puzzles/Pokemon_strength.jpg}{.8\textwidth}
 
 \paragraph{Slippery sokoban} Pokémon frozen floor style puzzle, find the correct order of movements from the entrance to reach the exit while sliding on the floor until an obstacle is met.
 
-\centeredgraphics{../Pictures/Puzzles/Pokemon_ice.png}
+\centeredgraphicssize{../Pictures/Puzzles/Pokemon_ice.png}{.8\textwidth}
 
 \paragraph{Hangman} Classic hangman with letters attempts.
 
-\paragraph{Hanoi Tower} Shouldn't need an explanation.
+\paragraph{Hanoi Tower} Move the entire stack of unordered disks onto the last rod while sorting them from biggest to smallest.
 
 \paragraph{Invert tiles} Given a sequence of tiles, some on and some other off, changing the state of a platform changes the state for all its adjacent platforms. The game is won when all platforms are active. See Spyro's Spring Idols puzzle (https://www.youtube.com/watch?v=SGbjVeWdqms)
 
-\centeredgraphics{../Pictures/Puzzles/Spyro_Invert.jpg}
+\centeredgraphicssize{../Pictures/Puzzles/Spyro_Invert.jpg}{.8\textwidth}
 
 \paragraph{Tiles Path} Given a sequence of tiles and a grid of tiles with a token to move through in 2 axis, the Player has to move the token on tiles that follow the given sequence. (See Hype: The Time Quest's Brigand's Hideout minigame, Path of Exile's minigame in The Lord's Labyrinth
 
-\centeredgraphics{../Pictures/Puzzles/Hype_tiles.png}
+\centeredgraphicssize{../Pictures/Puzzles/Hype_tiles.png}{.8\textwidth}
 
 \paragraph{Cheater!} Different titles for old games appear one after another. The play has to insert a valid cheat code for each of those games.
 
