--- a/Game_Design_Document/Content/Prototype.tex
+++ b/Game_Design_Document/Content/Prototype.tex
@@ -10,7 +10,7 @@ However not all rooms and minigames will be implemented.
 
 Only the Standard Game Mode will be implemented, with its victory conditions. From there other modes can be easily simulated without their rules being forced by the game, as long as the involved testers play accordingly to other modes rules.
 
-\textbf{Minigames}
+\largeparagraph{Minigames}
 \begin{itemize}
 	\item Tiles Path
 	\item Invet Tiles
@@ -18,7 +18,7 @@ Only the Standard Game Mode will be implemented, with its victory conditions. Fr
 	\item Connect Cables
 \end{itemize}
 
-\textbf{Rooms}
+\largeparagraph{Rooms}
 \begin{itemize}
 	\item Empty
 	\item Entrance
@@ -34,11 +34,13 @@ Only the Standard Game Mode will be implemented, with its victory conditions. Fr
 With all the actions and items related to the listed Rooms.
 If enough time is left, we will add the different Classes to check their balance in a real match.
 
+\pagebreak
+
 \subsection{Testing only "cheats"}
 
 For testing purposes, there will be some old-school cheat codes.
 
-In the main game there will be codes to:
+\largeparagraph{Codes}
 
 \begin{itemize}
 	\item Allow the players to bypass a minigame and force the application of either the negative or the positive effect of the room they're in.
