--- a/Game_Design_Document/Content/Story.tex
+++ b/Game_Design_Document/Content/Story.tex
@@ -4,7 +4,6 @@
 
 Alexandria 51 was a thriving and technologically advanced city before a great war reduced it to a ghost town. You are one of the scavengers roaming in Alexandria’s 51 ruins trying to find the mysterious artifact which caused the rapid technological progress of the city. You finally reached the core building of the city and try to get inside it. A trap is activated, and an extreme bright light blinds you and your fellow criminals. For a few moments you can see the magical artifact, but now you are stuck inside the building and you have to find the artifact and get out.
 
-
 \subsection{Complete story}
 
 Within a world of science and technology, Alexandria 51 was the peak in terms of innovations and research. Alas, torn to pieces after a great war, only the rests of the buildings remain as witnesses for this sorrowful loss for humanity... except for greedy scavengers that still wander in what remains of the ghost town.\\
@@ -14,12 +13,9 @@ Finally, you are able to reach what appears to be the core of the building: a re
 Suddenly the ground shakes, with sound of thunder the ancient traps built to keep the broom inside activated around the unaware scavengers.\\
 Nonetheless, everyone looks blinded by greed, shoving and pushing everything in the attempt to reach the magical artifact. Are you going to be the one who catches it? Or will you perish in the crumbling ruins?\\
 
-
 \subsection{Narrative devices}
 
-The story will be told visually, using a cut-scene when registering into the game, before choosing your avatar class.\\
-
-\pagebreak
+The story will be told visually, using a cut-scene when registering into the game, before choosing your avatar class.
 
 \subsection{Story Board}
 
