--- a/Game_Design_Document/Packages.tex
+++ b/Game_Design_Document/Packages.tex
@@ -16,7 +16,8 @@
 \usepackage{titlesec}
 \usepackage{longtable}
 \usepackage[default]{lato}
-\usepackage{hyperref}
+%\usepackage{hyperref}
+%\usepackage{verbatimbox}
 
 \titleformat{\section}
   {\normalfont\LARGE\bfseries}{\thesection}{1em}{}[{\titlerule[0.8pt]}]
