--- a/Technical_Design_Document/Changelog.tex
+++ b/Technical_Design_Document/Changelog.tex
@@ -1,4 +1,4 @@
-\section{Changelog}
+\section*{Changelog}
 
 \subsubsection*{Purpose}
 A Technical Design Document describes a solution to a given technical problem. It is a specification, or “design blueprint”, for a software program or feature. The primary function of a TDD is to communicate the technical details of the work to be done to members of the team. However, there is a second purpose which is just as important: the process of writing the TDD forces you to organize your thoughts and consider every aspect of the design, ensuring that you haven’t left anything out.
@@ -7,7 +7,7 @@ A Technical Design Document describes a solution to a given technical problem. I
 Since 10/05/2021.
 
 \subsubsection*{Last modification}
-Last modification: 05/06/2021.\\
+Last modification: 06/06/2021.\\
 
 \begin{longtable}{ m{2cm}m{8cm}m{3cm}} 
 \centering 
@@ -33,5 +33,6 @@ Francesco &		Finished Connection section  & 																	03/06/2021\\
 Together &		Added Potential security issues section &  														04/06/2021\\
 Together &		Reviewed the final version of the document adjusting minor English errors &  					05/06/2021\\
 Together & 		Fixed the structure of the document  &  														05/06/2021\\
+Together & 		Final draft of the document  &  														06/06/2021\\
 \end{longtable}
 \pagebreak
