--- a/Technical_Design_Document/Content/Cost_estimation.tex
+++ b/Technical_Design_Document/Content/Cost_estimation.tex
@@ -77,6 +77,8 @@ See sections \ref{section:Development_hardware} and \ref{section:Development_sof
 	
 \end{tabular}}
 
+\pagebreak
+
 \subsection{Staff}
 
 See section \ref{section:staff}
@@ -147,7 +149,6 @@ Furniture:
 
 
 \subsection{Totals}
-
 
 \addvbuffer[10pt 10pt]{\begin{tabular}{ | l | r | }
     \hline
