--- a/Technical_Design_Document/Technical_Design_Document.tex
+++ b/Technical_Design_Document/Technical_Design_Document.tex
@@ -24,7 +24,7 @@
 \input{Content/Staff}
 \input{Content/Location}
 \input{Content/Cost_estimation}
-\input{Content/Security_issues}
+%\input{Content/Security_issues}
 
 
 
