--- a/Game_Design_Document/Content/Vision_Statement.tex
+++ b/Game_Design_Document/Content/Vision_Statement.tex
@@ -4,15 +4,28 @@
 
 Each player takes the role of a scavenger trying to get his hands on the treasure of the fallen city of Alexandria, a magical broom brimming with inconceivable powers. \\
 
-This artifact, called the Broom, is stored into a crumbling secret laboratory; each room of which hides a surprise: it could be a boon, to gain advantage over the others, or it could be a deadly trap. The players will need to solve a straightforward puzzle to get the reward or to avoid impending doom. \\
+This artifact, called the Broom, is stored into a crumbling secret laboratory, each room of which hides a surprise: it could be a boon, to gain advantage over the others, or it could be a deadly trap. The players will need to solve a straightforward puzzle to get the reward or to avoid impending doom. \\
 
 The ways to get to the Broom are many: you can completely avoid the other scavengers, actively fight them, mislead them in their search or even cooperate with them if they're willing... only to stab them in their backs whenever they least expect it. \\
 
-Only the strongest will be able to retrieve the artifact and escape the crumbling ruins of the secret laboratory in which it is stored, so players will need to plan ahead and think carefully about how to explore the perilous maze.
+Only the fittest will be able to retrieve the artifact and escape unscathed from the crumbling ruins: players will need to plan ahead and think carefully about how to explore the perilous maze.
 
 \subsection{Logline}
 
-\textit{Solve the puzzles and grab the Broom, get lost in spiraling madness.}
+\textit{Grab the Broom or get lost in spiraling madness.}
+
+\subsection{Gameplay Synopsis}
+
+The game starts with all the players together in the middle room of the lab complex (Variations in the Game Modes section). All the other rooms are
+under a "fog of war", players don't know what's in them. The rooms are randomly generated and placed
+around the starting area. One room will contain the magic broom. In all game modes the victory or loss condition revolves around the broom.\\
+
+The game is structured in 3 phases: firstly, the players choose two between all the possible actions (cfr. Gameplay/Actions section)  (planning phase);
+then all the chosen actions will happen one after the other following the player order, which will change at the end of every turn (action phase). After that in the third phase, all players who find themselves in the different room than the one they were in at the beginning of the turn, will have to solve a short puzzle game which type and complexity depends on the room type (puzzle phase). \\
+
+Most of the rooms can have effects on the player characters, some positive and some negative. In the former case, the positive effect is only applied if the player in that room manages to solve the puzzle. In the latter, the negative effect is only applied if the player in that room fails to solve the puzzle. All puzzles have a timer to ensure that the game proceeds. If the timer reaches zero, the puzzle is considered failed. 
+
+\pagebreak
 
 \subsection{Look and Feel}
 
@@ -32,18 +45,5 @@ The laboratory in which the game takes place show some signs of decadence and ab
 Each room of the lab complex has its own style for the player to better identify at first glance which room he's looking at. \\
 
 The musical accompaniment features synthwave music for both soundtrack and sound effects.
-
-\clearpage 
-
-\subsection{Gameplay Synopsis}
-
-The game starts with all the players together in the middle room of the lab complex (Variations in the Game Modes section). All the other rooms are
-under a "fog of war", players don't know what's in them. The rooms are randomly generated and placed
-around the starting area. One room will contain the magic broom. In all game modes the victory or loss condition revolves around the broom.\\
-
-The game is structured in 3 phases: firstly, the players choose two between all the possible actions (cfr. Gameplay/Actions section)  (planning phase);
-then all the chosen actions will happen one after the other following the player order, which will change at the end of every turn (action phase). After that in the third phase, all players who find themselves in the different room than the one they were in at the beginning of the turn, will have to solve a short puzzle game which type and complexity depends on the room type (puzzle phase). \\
-
-Most of the rooms can have effects on the player characters, some positive and some negative. In the former case, the positive effect is only applied if the player in that room manages to solve the puzzle. In the latter, the negative effect is only applied if the player in that room fails to solve the puzzle. All puzzles have a timer to ensure that the game proceeds. If the timer reaches zero, the puzzle is considered failed. 
 
 \clearpage 
