--- a/Technical_Design_Document/Content/Client.tex
+++ b/Technical_Design_Document/Content/Client.tex
@@ -5,8 +5,8 @@
 \subsubsection{Minimum System Requirements}
 
 \begin {itemize}	
-	\item \textbf{Operational System:} Windows 7 / Windows 8.1 / Windows 10 64-Bit
-	\item \textbf{Processor: } Intel Pentium E2180 @ 2.00GHz / AMD Turion 64 X2 Mobile TL-64
+	\item \textbf{Operating System:} Windows 7 / Windows 8.1 / Windows 10 32 or 64-Bit
+	\item \textbf{Processor:} Intel Pentium E2180 @ 2.00GHz / AMD Turion 64 X2 Mobile TL-64
 	\item \textbf{Video Card:}  GeForce 7600 GT / Radeon HD 7310G
 	\item \textbf{RAM Free:}  1 GB RAM
 	\item \textbf{Disk Space:} 250 MB Free
@@ -16,8 +16,8 @@
 \subsubsection{Recommended System Requirements}
 
 \begin {itemize}	
-	\item \textbf{Operational System:} Windows 10 64-Bit
-	\item \textbf{Processor: } Intel Core2 Duo E6850 @ 3.00GHz / AMD Athlon II X2 250e
+	\item \textbf{Operating System:} Windows 10 32 or 64-Bit
+	\item \textbf{Processor:} Intel Core2 Duo E6850 @ 3.00GHz / AMD Athlon II X2 250e
 	\item \textbf{Video Card:}  GeForce 8800 GTX / Radeon HD 6570
 	\item \textbf{RAM Free:}  2 GB RAM
 	\item \textbf{Disk Space:} 250 MB Free
@@ -28,9 +28,8 @@
 \subsubsection{Minimum System Requirements}
 
 \begin {itemize}	
-	\item \textbf{Operational System:} Windows 8.1 / Windows 10 64-Bit
-	\item \textbf{Processor: } Intel Pentium E2180 @ 2.00GHz / AMD Turion 64 X2 Mobile TL-64
-	\item \textbf{Video Card:}  GeForce 7600 GT / Radeon HD 7310G
+	\item \textbf{Processor:} Intel Pentium E2180 @ 2.00GHz / AMD Turion 64 X2 Mobile TL-64 /  Snapdragon 410 Quad Core 1.4 GHz or equivalent
+	\item \textbf{Video Card:}  GeForce 7600 GT / Radeon HD 7310G / Adreno 306 or equivalent
 	\item \textbf{RAM Free:}  1 GB RAM
 	\item \textbf{Software:} Any Browser with HTML5 support
 
@@ -39,9 +38,8 @@
 \subsubsection{Recommended System Requirements}
 
 \begin {itemize}	
-	\item \textbf{Operational System:} Windows 10 64-Bit
-	\item \textbf{Processor: } Intel Core2 Duo E6850 @ 3.00GHz / AMD Athlon II X2 250e
-	\item \textbf{Video Card:}  GeForce 8800 GTX / Radeon HD 6570
+	\item \textbf{Processor:} Intel Core2 Duo E6850 @ 3.00GHz / AMD Athlon II X2 250e /  Snapdragon 430 Octa Core 1.4 GHz or equivalent
+	\item \textbf{Video Card:}  GeForce 8800 GTX / Radeon HD 6570 / Adreno 505 or equivalent
 	\item \textbf{RAM Free:}  2 GB RAM
 	\item \textbf{Software:} Any Browser with HTML5 support
 
@@ -52,8 +50,8 @@
 \subsubsection{Minimum System Requirements}
 
 \begin {itemize}	
-	\item \textbf{Operational System:} Android 7.0 or higher
-	\item \textbf{Processor: } Snapdragon 410 Quad Core 1.4 GHz or equivalent
+	\item \textbf{Operating System:} Android 7.0 or higher
+	\item \textbf{Processor:} Snapdragon 410 Quad Core 1.4 GHz or equivalent
 	\item \textbf{Video Card:}  Adreno 306 or equivalent
 	\item \textbf{RAM Free:}  1 GB RAM
 	\item \textbf{Disk Space:} 250 MB Free
@@ -64,8 +62,8 @@
 \subsubsection{Recommended System Requirements}
 
 \begin {itemize}	
-	\item \textbf{Operational System:} Android 9.x
-	\item \textbf{Processor: } Snapdragon 430 Octa Core 1.4 GHz or equivalent
+	\item \textbf{Operating System:} Android 9.x
+	\item \textbf{Processor:} Snapdragon 430 Octa Core 1.4 GHz or equivalent
 	\item \textbf{Video Card:}  Adreno 505 or equivalent
 	\item \textbf{RAM Free:}  2 GB RAM
 	\item \textbf{Disk Space:} 250 MB Free
