--- a/Technical_Design_Document/Content/Workload_estimation.tex
+++ b/Technical_Design_Document/Content/Workload_estimation.tex
@@ -14,3 +14,5 @@ Aside for minigames, networking operations and computation are minimal on both t
 The servers will have to keep track of currency, highscores and end-game statistics, and purchased cosmetics for each player. Ultimately it's again a negligible amount of data per each player. 50KB should suffice with enough overhead for future content.
 
 After the game is released, besides bugfixing, there will be regular updates introducing new cosmetics, and potentially larger updates introducing new game modes and adding more rooms, minigames and statuses to the game. After the initial peak, we think the interest in the game will stabilize in few weeks, and remain relevant for 2 or at best 3 years.
+
+\pagebreak
