Final fixes and additions

--- a/Technical_Design_Document/Content/Cost_estimation.tex
+++ b/Technical_Design_Document/Content/Cost_estimation.tex
@@ -55,7 +55,7 @@ See section \ref{section:backend_hardware}
 	\textbf{Total}                     & Asia & Monthly & 362.87€ &  442.70€\\
 	\hline
 	\hline
-	\textbf{Total}                     &      & Monthly &         & 1197.64€\\
+	\textbf{Total}                     &      & Monthly &         & 1'197.64€\\
 	\hline
 \end{tabular}}
 
@@ -66,13 +66,13 @@ See sections \ref{section:Development_hardware} and \ref{section:Development_sof
 	\hline
 	                                        & Count & Cost     & TOT \\
 	\hline
-	Developer PC                            & 5     & 1125.62€ & 5628.10€ \\
+	Developer PC                            & 5     & 1'125.62€ & 5'628.10€ \\
 	Windows 10 x64 Professional             & 5     &  199.99€ &  999.95€ \\
 	Game Maker Studio 2 (Developer Desktop) & 1     &   84.00€ &   84.00€ \\
 	Game Maker Studio 2 (Developer Web)     & 1     &   84.00€ &   84.00€ \\
 	Game Maker Studio 2 (Developer Mobile)  & 1     &   84.00€ &   84.00€ \\
 	\hline
-	\textbf{Total}                          &       &          & 6880.05€ \\
+	\textbf{Total}                          &       &          & 6'880.05€ \\
 	\hline
 	
 \end{tabular}}
@@ -87,25 +87,25 @@ See section \ref{section:staff}
 	\hline
 	                     & Count  & Months & Cost/Mo  & TOT \\
 	\hline
-	Junior Developer     & 3      & 8      & 2500.00€ & 60000.00€ \\
-	Web Developer        & 1      & 1      & 2500.00€ &  2500.00€ \\
-	AWS Developer        & 1      & 8      & 2800.00€ & 22400.00€ \\
-	Tester               & 2      & 2      & 1500.00€ &  6000.00€ \\
-	Social Media Manager & 1      & 4      & 1200.00€ &  4800.00€ \\
-	Community Manager    & 2      & 2      & 1000.00€ &  4000.00€ \\
-	Accountant           & 1      & 8      & 1500.00€ & 12000.00€ \\
+	Junior Developer     & 3      & 8      & 2'500.00€ & 60'000.00€ \\
+	Web Developer        & 1      & 1      & 2'500.00€ &  2'500.00€ \\
+	AWS Developer        & 1      & 8      & 2'800.00€ & 22'400.00€ \\
+	Tester               & 2      & 2      & 1'500.00€ &  6'000.00€ \\
+	Social Media Manager & 1      & 4      & 1'200.00€ &  4'800.00€ \\
+	Community Manager    & 2      & 2      & 1'000.00€ &  4'000.00€ \\
+	Accountant           & 1      & 8      & 1'500.00€ & 12'000.00€ \\
 	\hline
 	                     & Count  & Hours  & Cost/Ho  & TOT \\
 	\hline
-	Legal assistant      & 1      & 720    &   25.00€ & 18000.00€ \\
+	Legal assistant      & 1      & 720    &   25.00€ & 18'000.00€ \\
 	\hline                        
 	\textbf{Outsourced}  & Per    & Amount & Cost     & TOT \\
 	\hline                        
-	2d Artist            & Asset  &  500   &   20.00€ &  10000.00€ \\
-	Composer             & Minute &   15   &  750.00€ &  11250.00€ \\
+	2d Artist            & Asset  &  500   &   20.00€ &  10'000.00€ \\
+	Composer             & Minute &   15   &  750.00€ &  11'250.00€ \\
 	Translation          & Word   & 4000   &    0.12€ &    960.00€ \\
 	\hline                        
-	\textbf{Total}       &        &        &          &      TODO€ \\
+	\textbf{Total}       &        &        &          &       € 151'910.00€ \\
 	\hline
 \end{tabular}}
 
@@ -116,12 +116,12 @@ See section \ref{section:location}
 	\hline
 	                     & Months & Cost/Mo  & TOT \\
 	\hline
-	Rent                 &    8   &  760.00€ &  6080.00€ \\
-	Cleaning             &    8   &  300.00€ &  2400.00€ \\
+	Rent                 &    8   &  760.00€ &  6'080.00€ \\
+	Cleaning             &    8   &  300.00€ &  2'400.00€ \\
 	Electricity, heating &    8   &   30.00€ &   240.00€ \\
-	Internet plan        &    8   &  300.00€ &  2400.00€ \\
+	Internet plan        &    8   &  300.00€ &  2'400.00€ \\
 	\hline
-	\textbf{Total}       &        &          & 11120.00€ \\
+	\textbf{Total}       &        &          & 11'120.00€ \\
 	\hline
 \end{tabular}}
 
@@ -143,7 +143,7 @@ Furniture:
     Microwave oven              & 1     & 100.00€ &  100.00€ \\
     Fridge                      & 1     & 259.00€ &  259.00€ \\
     \hline
-    \textbf{Total}              &       &         & 1959.41€ \\
+    \textbf{Total}              &       &         & 1'959.41€ \\
     \hline
 \end{tabular}}
 
@@ -152,10 +152,10 @@ Furniture:
 
 \addvbuffer[10pt 10pt]{\begin{tabular}{ | l | r | }
     \hline
-	TOTAL       & 175'653.77€ \\
+	TOTAL       &  175'924.26€ \\
 	BUDGET      & 185'000.00€ \\
-	SURPLUS     &   9'346.23€ \\
+	SURPLUS     &   9'075.74€ \\
     \hline
 \end{tabular}}\\
 
-The surplus is enough to sustain the game servers on all 3 continents for ~5-6 months assuming the game has 0 revenue.
+The surplus is enough to sustain the game servers on all 3 continents for around 5-6 months assuming the game has 0 revenue.
