--- a/Technical_Design_Document/First_Page.tex
+++ b/Technical_Design_Document/First_Page.tex
@@ -9,7 +9,7 @@
 	\includegraphics[max width=0.2\textwidth]{../Pictures/DH_logo.png}
 \end{wrapfigure}
 
-\textbf{Team} \\ \\
+\textbf{Team Dying Hamsters} \\ \\
 \textit{Michael Marchesan} - 945887 \\
 \textit{Luca Di Gennaro} - 961208 \\
 \textit{Francesco Brischetto} - 958022 
